# computational-geometry

./: CMakeLists.txt  ChangeLog.md  README.md  geometry.cabal  package.yaml  stack.yaml
app/convexhull/: Main.hs
app/segment_intersections/: Main.hs
convexhull/: convexhull.cpp  input
geolib/: types.hpp
segmentintersection/: segmentintersection.cpp
src/Algorithm/: ConvexHull.hs  Intersection.hs
src/Data/: BinaryTree.hs  TreeMap.hs
src/Data/Geometry/: Orientation.hs  Point.hs  Segment.hs
test/: Spec.hs
test/Test/Data/: BinaryTree.hs
test/Test/Properties/: Functor.hs
